# VictreAndDetector

./: CMakeLists.txt  README.md  VICTRE_config_120.txt  interactive_mode.mac  main.cc  run_120.mac  tube_output_spekpy.mac  vis.mac
ExampleVictrePhantom/: pc_120_cropped.mhd
include/: Analysis.hh  B1ActionInitialization.hh  B1DetectorConstruction.hh  B1EventAction.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  B1SteppingAction.hh  B2TrackerHit.hh  B2TrackerSD.hh  B4Analysis.hh  MyNestedParam.hh  PhysicList.hh
src/: .B1DetectorConstruction.cc.kate-swp  B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SteppingAction.cc  B2TrackerHit.cc  B2TrackerSD.cc  MyNestedParam.cc  PhysicList.cc
